# scp

./: .gitignore  CMakeLists.txt  FindBLAS2.cmake  FindCHOLMOD.cmake  FindLibraryList.cmake  FindMKL.cmake  Makefile  Ne.in  OHeff.f90  README  argon.in  cholmod_logdet.c  cholmod_test.c  clustergs.f90  correlations.f90  csr_sort_ja.c  deps.mk  dlsode.f  dt_comparison.fig  dt_comparison.m  dt_comparison2.fig  dt_rtol.sh  dt_rtol_timing.txt  dump_Tmin.f90  dump_Umin.f90  ek.f90  errcomp.m  f90deps  ffvgw.f90  gaussmin.f90  gmd.f90  gmd_mod.f90  gmdshort.f90  heat_capacity.f90  hsm.f90  integration.f90  integrator.f90  intel.cmake  interaction_lists.f90  kubo.f90  (+51 more)
.kdev4/: scp.kdev4
cholmod_test.xcodeproj/: project.pbxproj
config/: apple-gcc.cmake  gcc.mk  intel.mk  pgi.mk
hsm-lj/: CMakeLists.txt  main.cpp
hsm-lj/hsm-lj.xcodeproj/: project.pbxproj
ljmc.xcodeproj/: ionut.mode1v3  ionut.pbxuser  project.pbxproj
nr/: CMakeLists.txt  dbrent.f90  frprmn.f90  linmin.f90  mnbrak.f90  nr.f90  nrtype.f90
pH2.xcodeproj/: ionut.pbxuser  project.pbxproj
water.xcodeproj/: project.pbxproj
